# MediaPlayer

./: CMakeLists.txt  ImageSlideshow.cpp  ImageSlideshow.h  README.md  VideoPlayer.cpp  VideoPlayer.h  main.cpp
